--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #eee;
 }
 
 .search-results__container {
@@ -58,7 +59,8 @@ code {
   height: 2rem;
   width: 2rem;
   border-radius: 2rem;
-  border: none;
+  background-color: white;
+  border: 1px solid #ddd;
 }
 
 .active {
